Solves footer overflow

--- a/formstyle.css
+++ b/formstyle.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  font: normal 18px/1.5 "roboto font";
+  font-family: "Roboto", sans-serif;
   background: rgb(245, 245, 245);
   color: rgb(27, 27, 50);
   padding: 25px 0;
@@ -16,13 +16,10 @@ h1,p{
   
 }
 .container {
-  width: 80%;
-  max-width: 1200px;
   margin: 0 auto;
   display: grid;
   grid-template: 1fr / 3fr 1fr ;
   gap: 2rem;
-  height: 100vh;
   align-items: center;
 }
  
